--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.9.1",
     "remark-gfm": "^4.0.1"
   },
