Preparación para despliegue

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,23 @@
-# Usamos una imagen oficial de Python como base
+# Usa una imagen oficial de Python
 FROM python:3.11-slim
 
-# Establecemos el directorio de trabajo dentro del contenedor
+# Establece el directorio de trabajo
 WORKDIR /app
 
-# Copiamos primero el archivo de requerimientos
+# Copia el archivo de requerimientos
 COPY requirements.txt .
 
-# Instalamos las dependencias
-RUN pip install --no-cache-dir -r requirements.txt
+# Instala las dependencias, incluyendo Gunicorn
+RUN pip install --no-cache-dir -r requirements.txt gunicorn
 
-# Copiamos el resto del código de nuestra aplicación
+# Copia todo el código de la aplicación
 COPY . .
 
-# Este comando se ejecutará cuando el contenedor inicie (lo definiremos en docker-compose)
-# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Expone el puerto en el que correrá Gunicorn
+EXPOSE 8000
+
+# Comando para correr la app con Gunicorn
+# bind: Escucha en todas las interfaces de red en el puerto 8000.
+# workers: Número de procesos para manejar peticiones. 4 es un buen punto de partida.
+# k uvicorn.workers.UvicornWorker: Le dice a Gunicorn que use Uvicorn para manejar los procesos.
+CMD ["gunicorn", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000"]
