--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,30 +1,19 @@
 # ---- Stage 1: Build ----
-# Usa una imagen de Node para construir la aplicación React
 FROM node:20 AS build
-
 WORKDIR /app
-
-# Copia los archivos de manifiesto y package-lock
 COPY package*.json ./
-
-# Instala las dependencias
 RUN npm install
-
-# Copia el resto del código de la aplicación
 COPY . .
-
-# Construye la aplicación para producción
 RUN npm run build
 
 # ---- Stage 2: Serve ----
-# Usa una imagen de Nginx para servir los archivos estáticos
 FROM nginx:alpine
 
-# Copia los archivos construidos desde la etapa 'build' a la carpeta web de Nginx
+# Copia los archivos de la app construida
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Expone el puerto 80
-EXPOSE 80
+# ¡NUEVA LÍNEA! Copia nuestro archivo de configuración personalizado
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# El comando por defecto de Nginx se encargará de iniciar el servidor
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
