--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^10.1.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.9.1",
+    "recharts": "^3.2.1",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
