--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "axios": "^1.12.1",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
